// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wireframe: WireframeContainer should default to open 1`] = `
.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 [data-annotations-container] {
  width: 0;
  min-width: 0;
}

.emotion-10 [data-annotations-container] [data-annotations] {
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.emotion-10.open [data-annotations-container] {
  width: 25%;
  min-width: 250px;
}

.emotion-10.open [data-annotations-container] [data-annotations] {
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

.emotion-0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-8 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 400px;
  padding: 0;
  -webkit-transition: width 250ms ease-in-out,min-width 250ms ease-in-out;
  transition: width 250ms ease-in-out,min-width 250ms ease-in-out;
}

.emotion-6 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-left: 2px solid #555;
  padding: 0;
  width: 25%;
  max-width: 400px;
  min-width: 250px;
  position: fixed;
  right: 0;
  top: 0;
  bottom: 0;
  background-color: #fafafa;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: -webkit-transform 250ms ease-in-out;
  -webkit-transition: transform 250ms ease-in-out;
  transition: transform 250ms ease-in-out;
  z-index: 6000;
}

.emotion-6 header.annotations {
  padding: 0.1em 0.75em;
  background-color: #555;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-6 header.annotations h1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-size: 1.5em;
  margin: 0;
  line-height: 1.5;
  font-weight: lighter;
}

.emotion-2 {
  font-size: 1.25em;
  position: absolute;
  left: 0;
  top: 50%;
  background-color: #555;
  color: #fff;
  padding: 0.25em;
  border: none;
  border-radius: 0.25em 0 0 0.25em;
  -webkit-transform: translate(-100%,-50%);
  -ms-transform: translate(-100%,-50%);
  transform: translate(-100%,-50%);
  -webkit-transition: opacity 100ms;
  transition: opacity 100ms;
  min-height: 3em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  opacity: 1;
}

.emotion-2:active,
.emotion-2:focus,
.emotion-2:hover {
  outline: none;
  opacity: 1;
}

.emotion-2 span {
  font-weight: bold;
  -webkit-transition: -webkit-transform 250ms;
  -webkit-transition: transform 250ms;
  transition: transform 250ms;
  display: block;
}

.emotion-4 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  cursor: pointer;
  line-height: 1;
  font-size: 1.5em;
  background-color: transparent;
  border: none;
  padding: 0 0 0 0.25em;
  color: inherit;
}

<WireframeProvider
  api={
    Object {
      "getAnnotations": [Function],
      "highlightNote": [Function],
      "isOpen": [Function],
      "onOpen": [Function],
      "register": [Function],
      "setOpen": [Function],
      "setOptions": [Function],
      "unregister": [Function],
    }
  }
>
  <WireframeContainer>
    <WireframeMainContainer
      className="open"
      data-test="container"
    >
      <div
        className="open emotion-10 emotion-11"
        data-test="container"
      >
        <WireframeBody>
          <main
            className="emotion-0 emotion-1"
          >
            <div>
              Child component 1
            </div>
            <div>
              Child component 2
            </div>
          </main>
        </WireframeBody>
        <WireframeAnnotationsContainer
          data-annotations-container={true}
        >
          <section
            className="emotion-8 emotion-9"
            data-annotations-container={true}
          >
            <WireframeAnnotationsWrapper
              data-annotations={true}
            >
              <div
                className="emotion-6 emotion-7"
                data-annotations={true}
              >
                <WireframeAnnotationsToggle
                  data-test="toggle"
                  onClick={[Function]}
                  open={true}
                  title="Toggle annotations"
                >
                  <button
                    className="emotion-2 emotion-3"
                    data-test="toggle"
                    onClick={[Function]}
                    open={true}
                    title="Toggle annotations"
                  >
                    <span>
                      →
                    </span>
                  </button>
                </WireframeAnnotationsToggle>
                <header
                  className="annotations"
                >
                  <h1>
                    Annotations
                  </h1>
                  <WireframeAnnotationsClose
                    aria-label="Close annotations"
                    onClick={[Function]}
                  >
                    <button
                      aria-label="Close annotations"
                      className="emotion-4 emotion-5"
                      onClick={[Function]}
                    >
                      ×
                    </button>
                  </WireframeAnnotationsClose>
                </header>
              </div>
            </WireframeAnnotationsWrapper>
          </section>
        </WireframeAnnotationsContainer>
      </div>
    </WireframeMainContainer>
  </WireframeContainer>
</WireframeProvider>
`;

exports[`Wireframe: WireframeContainer should highlight annotation 1`] = `
.emotion-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-32 [data-annotations-container] {
  width: 0;
  min-width: 0;
}

.emotion-32 [data-annotations-container] [data-annotations] {
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.emotion-32.open [data-annotations-container] {
  width: 25%;
  min-width: 250px;
}

.emotion-32.open [data-annotations-container] [data-annotations] {
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

.emotion-0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-30 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 400px;
  padding: 0;
  -webkit-transition: width 250ms ease-in-out,min-width 250ms ease-in-out;
  transition: width 250ms ease-in-out,min-width 250ms ease-in-out;
}

.emotion-28 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-left: 2px solid #555;
  padding: 0;
  width: 25%;
  max-width: 400px;
  min-width: 250px;
  position: fixed;
  right: 0;
  top: 0;
  bottom: 0;
  background-color: #fafafa;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: -webkit-transform 250ms ease-in-out;
  -webkit-transition: transform 250ms ease-in-out;
  transition: transform 250ms ease-in-out;
  z-index: 6000;
}

.emotion-28 header.annotations {
  padding: 0.1em 0.75em;
  background-color: #555;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-28 header.annotations h1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-size: 1.5em;
  margin: 0;
  line-height: 1.5;
  font-weight: lighter;
}

.emotion-2 {
  font-size: 1.25em;
  position: absolute;
  left: 0;
  top: 50%;
  background-color: #555;
  color: #fff;
  padding: 0.25em;
  border: none;
  border-radius: 0.25em 0 0 0.25em;
  -webkit-transform: translate(-100%,-50%);
  -ms-transform: translate(-100%,-50%);
  transform: translate(-100%,-50%);
  -webkit-transition: opacity 100ms;
  transition: opacity 100ms;
  min-height: 3em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  opacity: 1;
}

.emotion-2:active,
.emotion-2:focus,
.emotion-2:hover {
  outline: none;
  opacity: 1;
}

.emotion-2 span {
  font-weight: bold;
  -webkit-transition: -webkit-transform 250ms;
  -webkit-transition: transform 250ms;
  transition: transform 250ms;
  display: block;
}

.emotion-4 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  cursor: pointer;
  line-height: 1;
  font-size: 1.5em;
  background-color: transparent;
  border: none;
  padding: 0 0 0 0.25em;
  color: inherit;
}

.emotion-26 {
  overflow: auto;
  z-index: 1;
  position: relative;
  background-color: inherit;
}

.emotion-24 {
  list-style: none;
  margin: 0;
  padding: 0;
  outline: none;
}

.emotion-24 li {
  padding: 6px 0;
  border-bottom: 1px solid #ccc;
}

.emotion-24 li:last-child {
  border-bottom: none;
}

.emotion-24 li.highlight {
  background-color: rgba(64,134,247,0.25);
}

.emotion-13 {
  font-size: 0.85rem;
}

.emotion-13 > header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 10px;
  margin-bottom: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-13 > header h2 {
  font-size: 1.2rem;
  margin: 0;
  font-weight: normal;
}

.emotion-13 > article {
  padding: 0 10px;
}

.emotion-9 {
  margin-right: 0.5em;
  border-width: 1px;
  border-style: solid;
  font-size: 0.8em;
}

.emotion-7 {
  border-radius: 2em;
  background-color: yellow;
  border-color: #caca00;
  white-space: nowrap;
  min-width: 2em;
  height: 2em;
  padding: 0.25em 0.5em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-style: normal;
  font-weight: normal;
  margin-right: 0.5em;
  border-width: 1px;
  border-style: solid;
  font-size: 0.8em;
}

<WireframeProvider
  api={
    Object {
      "getAnnotations": [Function],
      "highlightNote": [Function],
      "isOpen": [Function],
      "onOpen": [Function],
      "register": [Function],
      "setOpen": [Function],
      "setOptions": [Function],
      "unregister": [Function],
    }
  }
>
  <WireframeContainer
    defaultOpen={false}
    onScrollIntoView={
      [MockFunction] {
        "calls": Array [
          Array [
            .emotion-3 {
  font-size: 0.85rem;
}

.emotion-3 > header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 10px;
  margin-bottom: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 > header h2 {
  font-size: 1.2rem;
  margin: 0;
  font-weight: normal;
}

.emotion-3 > article {
  padding: 0 10px;
}

.emotion-1 {
  border-radius: 2em;
  background-color: yellow;
  border-color: #caca00;
  white-space: nowrap;
  min-width: 2em;
  height: 2em;
  padding: 0.25em 0.5em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-style: normal;
  font-weight: normal;
  margin-right: 0.5em;
  border-width: 1px;
  border-style: solid;
  font-size: 0.8em;
}

<li
              class="highlight"
              data-annotation-id="1"
            >
              <article
                class="emotion-3 emotion-4"
              >
                <header>
                  <cite
                    class="emotion-0 emotion-1 emotion-2"
                    data-annotation-identifier="true"
                  >
                    1
                  </cite>
                  <h2>
                    Test component 1
                  </h2>
                </header>
                <article>
                  Test description 1
                </article>
              </article>
            </li>,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    <WireframeMainContainer
      className="open"
      data-test="container"
    >
      <div
        className="open emotion-32 emotion-33"
        data-test="container"
      >
        <WireframeBody>
          <main
            className="emotion-0 emotion-1"
          >
            <div>
              Child component 1
            </div>
            <div>
              Child component 2
            </div>
          </main>
        </WireframeBody>
        <WireframeAnnotationsContainer
          data-annotations-container={true}
        >
          <section
            className="emotion-30 emotion-31"
            data-annotations-container={true}
          >
            <WireframeAnnotationsWrapper
              data-annotations={true}
            >
              <div
                className="emotion-28 emotion-29"
                data-annotations={true}
              >
                <WireframeAnnotationsToggle
                  data-test="toggle"
                  onClick={[Function]}
                  open={true}
                  title="Toggle annotations"
                >
                  <button
                    className="emotion-2 emotion-3"
                    data-test="toggle"
                    onClick={[Function]}
                    open={true}
                    title="Toggle annotations"
                  >
                    <span>
                      →
                    </span>
                  </button>
                </WireframeAnnotationsToggle>
                <header
                  className="annotations"
                >
                  <h1>
                    Annotations
                  </h1>
                  <WireframeAnnotationsClose
                    aria-label="Close annotations"
                    onClick={[Function]}
                  >
                    <button
                      aria-label="Close annotations"
                      className="emotion-4 emotion-5"
                      onClick={[Function]}
                    >
                      ×
                    </button>
                  </WireframeAnnotationsClose>
                </header>
                <WireframeAnnotationNotesContainer>
                  <div
                    className="emotion-26 emotion-27"
                  >
                    <WireframeAnnotationNotes
                      annotations={
                        Array [
                          Object {
                            "Component": [MockFunction],
                            "count": 1,
                            "id": 1,
                            "options": Object {
                              "description": "Test description 1",
                              "title": "Test component 1",
                            },
                          },
                          Object {
                            "Component": [MockFunction],
                            "count": 1,
                            "id": 2,
                            "options": Object {
                              "description": "Test description 2",
                              "title": "Test component 2",
                            },
                          },
                        ]
                      }
                      highlightedNote={
                        Object {
                          "Component": [MockFunction],
                          "count": 1,
                          "id": 1,
                          "options": Object {
                            "description": "Test description 1",
                            "title": "Test component 1",
                          },
                        }
                      }
                    >
                      <WireframeAnnotationNotesContainer
                        tabIndex={0}
                      >
                        <ul
                          className="emotion-24 emotion-25"
                          tabIndex={0}
                        >
                          <li
                            className="highlight"
                            data-annotation-id={1}
                            key="1"
                          >
                            <WireframeAnnotationNote
                              annotation={
                                Object {
                                  "Component": [MockFunction],
                                  "count": 1,
                                  "id": 1,
                                  "options": Object {
                                    "description": "Test description 1",
                                    "title": "Test component 1",
                                  },
                                }
                              }
                            >
                              <WireframeAnnotationsNoteContainer>
                                <article
                                  className="emotion-13 emotion-14"
                                >
                                  <header>
                                    <IdentifierNote
                                      annotation={
                                        Object {
                                          "Component": [MockFunction],
                                          "count": 1,
                                          "id": 1,
                                          "options": Object {
                                            "description": "Test description 1",
                                            "title": "Test component 1",
                                          },
                                        }
                                      }
                                    >
                                      <Identifier
                                        annotation={
                                          Object {
                                            "Component": [MockFunction],
                                            "count": 1,
                                            "id": 1,
                                            "options": Object {
                                              "description": "Test description 1",
                                              "title": "Test component 1",
                                            },
                                          }
                                        }
                                        className="emotion-9 emotion-6"
                                      >
                                        <IdentifierContainer
                                          className="emotion-9 emotion-6"
                                          data-annotation-identifier={true}
                                        >
                                          <cite
                                            className="emotion-6 emotion-7 emotion-8"
                                            data-annotation-identifier={true}
                                          >
                                            1
                                          </cite>
                                        </IdentifierContainer>
                                      </Identifier>
                                    </IdentifierNote>
                                    <h2>
                                      Test component 1
                                    </h2>
                                  </header>
                                  <article>
                                    Test description 1
                                  </article>
                                </article>
                              </WireframeAnnotationsNoteContainer>
                            </WireframeAnnotationNote>
                          </li>
                          <li
                            className=""
                            data-annotation-id={2}
                            key="2"
                          >
                            <WireframeAnnotationNote
                              annotation={
                                Object {
                                  "Component": [MockFunction],
                                  "count": 1,
                                  "id": 2,
                                  "options": Object {
                                    "description": "Test description 2",
                                    "title": "Test component 2",
                                  },
                                }
                              }
                            >
                              <WireframeAnnotationsNoteContainer>
                                <article
                                  className="emotion-13 emotion-14"
                                >
                                  <header>
                                    <IdentifierNote
                                      annotation={
                                        Object {
                                          "Component": [MockFunction],
                                          "count": 1,
                                          "id": 2,
                                          "options": Object {
                                            "description": "Test description 2",
                                            "title": "Test component 2",
                                          },
                                        }
                                      }
                                    >
                                      <Identifier
                                        annotation={
                                          Object {
                                            "Component": [MockFunction],
                                            "count": 1,
                                            "id": 2,
                                            "options": Object {
                                              "description": "Test description 2",
                                              "title": "Test component 2",
                                            },
                                          }
                                        }
                                        className="emotion-9 emotion-6"
                                      >
                                        <IdentifierContainer
                                          className="emotion-9 emotion-6"
                                          data-annotation-identifier={true}
                                        >
                                          <cite
                                            className="emotion-6 emotion-7 emotion-8"
                                            data-annotation-identifier={true}
                                          >
                                            2
                                          </cite>
                                        </IdentifierContainer>
                                      </Identifier>
                                    </IdentifierNote>
                                    <h2>
                                      Test component 2
                                    </h2>
                                  </header>
                                  <article>
                                    Test description 2
                                  </article>
                                </article>
                              </WireframeAnnotationsNoteContainer>
                            </WireframeAnnotationNote>
                          </li>
                        </ul>
                      </WireframeAnnotationNotesContainer>
                    </WireframeAnnotationNotes>
                  </div>
                </WireframeAnnotationNotesContainer>
              </div>
            </WireframeAnnotationsWrapper>
          </section>
        </WireframeAnnotationsContainer>
      </div>
    </WireframeMainContainer>
  </WireframeContainer>
</WireframeProvider>
`;

exports[`Wireframe: WireframeContainer should highlight annotation 2`] = `
.emotion-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-32 [data-annotations-container] {
  width: 0;
  min-width: 0;
}

.emotion-32 [data-annotations-container] [data-annotations] {
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.emotion-32.open [data-annotations-container] {
  width: 25%;
  min-width: 250px;
}

.emotion-32.open [data-annotations-container] [data-annotations] {
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

.emotion-0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-30 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 400px;
  padding: 0;
  -webkit-transition: width 250ms ease-in-out,min-width 250ms ease-in-out;
  transition: width 250ms ease-in-out,min-width 250ms ease-in-out;
}

.emotion-28 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-left: 2px solid #555;
  padding: 0;
  width: 25%;
  max-width: 400px;
  min-width: 250px;
  position: fixed;
  right: 0;
  top: 0;
  bottom: 0;
  background-color: #fafafa;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: -webkit-transform 250ms ease-in-out;
  -webkit-transition: transform 250ms ease-in-out;
  transition: transform 250ms ease-in-out;
  z-index: 6000;
}

.emotion-28 header.annotations {
  padding: 0.1em 0.75em;
  background-color: #555;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-28 header.annotations h1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-size: 1.5em;
  margin: 0;
  line-height: 1.5;
  font-weight: lighter;
}

.emotion-2 {
  font-size: 1.25em;
  position: absolute;
  left: 0;
  top: 50%;
  background-color: #555;
  color: #fff;
  padding: 0.25em;
  border: none;
  border-radius: 0.25em 0 0 0.25em;
  -webkit-transform: translate(-100%,-50%);
  -ms-transform: translate(-100%,-50%);
  transform: translate(-100%,-50%);
  -webkit-transition: opacity 100ms;
  transition: opacity 100ms;
  min-height: 3em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  opacity: 1;
}

.emotion-2:active,
.emotion-2:focus,
.emotion-2:hover {
  outline: none;
  opacity: 1;
}

.emotion-2 span {
  font-weight: bold;
  -webkit-transition: -webkit-transform 250ms;
  -webkit-transition: transform 250ms;
  transition: transform 250ms;
  display: block;
}

.emotion-4 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  cursor: pointer;
  line-height: 1;
  font-size: 1.5em;
  background-color: transparent;
  border: none;
  padding: 0 0 0 0.25em;
  color: inherit;
}

.emotion-26 {
  overflow: auto;
  z-index: 1;
  position: relative;
  background-color: inherit;
}

.emotion-24 {
  list-style: none;
  margin: 0;
  padding: 0;
  outline: none;
}

.emotion-24 li {
  padding: 6px 0;
  border-bottom: 1px solid #ccc;
}

.emotion-24 li:last-child {
  border-bottom: none;
}

.emotion-24 li.highlight {
  background-color: rgba(64,134,247,0.25);
}

.emotion-13 {
  font-size: 0.85rem;
}

.emotion-13 > header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 10px;
  margin-bottom: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-13 > header h2 {
  font-size: 1.2rem;
  margin: 0;
  font-weight: normal;
}

.emotion-13 > article {
  padding: 0 10px;
}

.emotion-9 {
  margin-right: 0.5em;
  border-width: 1px;
  border-style: solid;
  font-size: 0.8em;
}

.emotion-7 {
  border-radius: 2em;
  background-color: yellow;
  border-color: #caca00;
  white-space: nowrap;
  min-width: 2em;
  height: 2em;
  padding: 0.25em 0.5em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-style: normal;
  font-weight: normal;
  margin-right: 0.5em;
  border-width: 1px;
  border-style: solid;
  font-size: 0.8em;
}

<WireframeProvider
  api={
    Object {
      "getAnnotations": [Function],
      "highlightNote": [Function],
      "isOpen": [Function],
      "onOpen": [Function],
      "register": [Function],
      "setOpen": [Function],
      "setOptions": [Function],
      "unregister": [Function],
    }
  }
>
  <WireframeContainer
    defaultOpen={false}
    onScrollIntoView={
      [MockFunction] {
        "calls": Array [
          Array [
            .emotion-3 {
  font-size: 0.85rem;
}

.emotion-3 > header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 10px;
  margin-bottom: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 > header h2 {
  font-size: 1.2rem;
  margin: 0;
  font-weight: normal;
}

.emotion-3 > article {
  padding: 0 10px;
}

.emotion-1 {
  border-radius: 2em;
  background-color: yellow;
  border-color: #caca00;
  white-space: nowrap;
  min-width: 2em;
  height: 2em;
  padding: 0.25em 0.5em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-style: normal;
  font-weight: normal;
  margin-right: 0.5em;
  border-width: 1px;
  border-style: solid;
  font-size: 0.8em;
}

<li
              class=""
              data-annotation-id="1"
            >
              <article
                class="emotion-3 emotion-4"
              >
                <header>
                  <cite
                    class="emotion-0 emotion-1 emotion-2"
                    data-annotation-identifier="true"
                  >
                    1
                  </cite>
                  <h2>
                    Test component 1
                  </h2>
                </header>
                <article>
                  Test description 1
                </article>
              </article>
            </li>,
          ],
          Array [
            .emotion-3 {
  font-size: 0.85rem;
}

.emotion-3 > header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 10px;
  margin-bottom: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 > header h2 {
  font-size: 1.2rem;
  margin: 0;
  font-weight: normal;
}

.emotion-3 > article {
  padding: 0 10px;
}

.emotion-1 {
  border-radius: 2em;
  background-color: yellow;
  border-color: #caca00;
  white-space: nowrap;
  min-width: 2em;
  height: 2em;
  padding: 0.25em 0.5em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-style: normal;
  font-weight: normal;
  margin-right: 0.5em;
  border-width: 1px;
  border-style: solid;
  font-size: 0.8em;
}

<li
              class="highlight"
              data-annotation-id="2"
            >
              <article
                class="emotion-3 emotion-4"
              >
                <header>
                  <cite
                    class="emotion-0 emotion-1 emotion-2"
                    data-annotation-identifier="true"
                  >
                    2
                  </cite>
                  <h2>
                    Test component 2
                  </h2>
                </header>
                <article>
                  Test description 2
                </article>
              </article>
            </li>,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    <WireframeMainContainer
      className="open"
      data-test="container"
    >
      <div
        className="open emotion-32 emotion-33"
        data-test="container"
      >
        <WireframeBody>
          <main
            className="emotion-0 emotion-1"
          >
            <div>
              Child component 1
            </div>
            <div>
              Child component 2
            </div>
          </main>
        </WireframeBody>
        <WireframeAnnotationsContainer
          data-annotations-container={true}
        >
          <section
            className="emotion-30 emotion-31"
            data-annotations-container={true}
          >
            <WireframeAnnotationsWrapper
              data-annotations={true}
            >
              <div
                className="emotion-28 emotion-29"
                data-annotations={true}
              >
                <WireframeAnnotationsToggle
                  data-test="toggle"
                  onClick={[Function]}
                  open={true}
                  title="Toggle annotations"
                >
                  <button
                    className="emotion-2 emotion-3"
                    data-test="toggle"
                    onClick={[Function]}
                    open={true}
                    title="Toggle annotations"
                  >
                    <span>
                      →
                    </span>
                  </button>
                </WireframeAnnotationsToggle>
                <header
                  className="annotations"
                >
                  <h1>
                    Annotations
                  </h1>
                  <WireframeAnnotationsClose
                    aria-label="Close annotations"
                    onClick={[Function]}
                  >
                    <button
                      aria-label="Close annotations"
                      className="emotion-4 emotion-5"
                      onClick={[Function]}
                    >
                      ×
                    </button>
                  </WireframeAnnotationsClose>
                </header>
                <WireframeAnnotationNotesContainer>
                  <div
                    className="emotion-26 emotion-27"
                  >
                    <WireframeAnnotationNotes
                      annotations={
                        Array [
                          Object {
                            "Component": [MockFunction],
                            "count": 1,
                            "id": 1,
                            "options": Object {
                              "description": "Test description 1",
                              "title": "Test component 1",
                            },
                          },
                          Object {
                            "Component": [MockFunction],
                            "count": 1,
                            "id": 2,
                            "options": Object {
                              "description": "Test description 2",
                              "title": "Test component 2",
                            },
                          },
                        ]
                      }
                      highlightedNote={
                        Object {
                          "Component": [MockFunction],
                          "count": 1,
                          "id": 2,
                          "options": Object {
                            "description": "Test description 2",
                            "title": "Test component 2",
                          },
                        }
                      }
                    >
                      <WireframeAnnotationNotesContainer
                        tabIndex={0}
                      >
                        <ul
                          className="emotion-24 emotion-25"
                          tabIndex={0}
                        >
                          <li
                            className=""
                            data-annotation-id={1}
                            key="1"
                          >
                            <WireframeAnnotationNote
                              annotation={
                                Object {
                                  "Component": [MockFunction],
                                  "count": 1,
                                  "id": 1,
                                  "options": Object {
                                    "description": "Test description 1",
                                    "title": "Test component 1",
                                  },
                                }
                              }
                            >
                              <WireframeAnnotationsNoteContainer>
                                <article
                                  className="emotion-13 emotion-14"
                                >
                                  <header>
                                    <IdentifierNote
                                      annotation={
                                        Object {
                                          "Component": [MockFunction],
                                          "count": 1,
                                          "id": 1,
                                          "options": Object {
                                            "description": "Test description 1",
                                            "title": "Test component 1",
                                          },
                                        }
                                      }
                                    >
                                      <Identifier
                                        annotation={
                                          Object {
                                            "Component": [MockFunction],
                                            "count": 1,
                                            "id": 1,
                                            "options": Object {
                                              "description": "Test description 1",
                                              "title": "Test component 1",
                                            },
                                          }
                                        }
                                        className="emotion-9 emotion-6"
                                      >
                                        <IdentifierContainer
                                          className="emotion-9 emotion-6"
                                          data-annotation-identifier={true}
                                        >
                                          <cite
                                            className="emotion-6 emotion-7 emotion-8"
                                            data-annotation-identifier={true}
                                          >
                                            1
                                          </cite>
                                        </IdentifierContainer>
                                      </Identifier>
                                    </IdentifierNote>
                                    <h2>
                                      Test component 1
                                    </h2>
                                  </header>
                                  <article>
                                    Test description 1
                                  </article>
                                </article>
                              </WireframeAnnotationsNoteContainer>
                            </WireframeAnnotationNote>
                          </li>
                          <li
                            className="highlight"
                            data-annotation-id={2}
                            key="2"
                          >
                            <WireframeAnnotationNote
                              annotation={
                                Object {
                                  "Component": [MockFunction],
                                  "count": 1,
                                  "id": 2,
                                  "options": Object {
                                    "description": "Test description 2",
                                    "title": "Test component 2",
                                  },
                                }
                              }
                            >
                              <WireframeAnnotationsNoteContainer>
                                <article
                                  className="emotion-13 emotion-14"
                                >
                                  <header>
                                    <IdentifierNote
                                      annotation={
                                        Object {
                                          "Component": [MockFunction],
                                          "count": 1,
                                          "id": 2,
                                          "options": Object {
                                            "description": "Test description 2",
                                            "title": "Test component 2",
                                          },
                                        }
                                      }
                                    >
                                      <Identifier
                                        annotation={
                                          Object {
                                            "Component": [MockFunction],
                                            "count": 1,
                                            "id": 2,
                                            "options": Object {
                                              "description": "Test description 2",
                                              "title": "Test component 2",
                                            },
                                          }
                                        }
                                        className="emotion-9 emotion-6"
                                      >
                                        <IdentifierContainer
                                          className="emotion-9 emotion-6"
                                          data-annotation-identifier={true}
                                        >
                                          <cite
                                            className="emotion-6 emotion-7 emotion-8"
                                            data-annotation-identifier={true}
                                          >
                                            2
                                          </cite>
                                        </IdentifierContainer>
                                      </Identifier>
                                    </IdentifierNote>
                                    <h2>
                                      Test component 2
                                    </h2>
                                  </header>
                                  <article>
                                    Test description 2
                                  </article>
                                </article>
                              </WireframeAnnotationsNoteContainer>
                            </WireframeAnnotationNote>
                          </li>
                        </ul>
                      </WireframeAnnotationNotesContainer>
                    </WireframeAnnotationNotes>
                  </div>
                </WireframeAnnotationNotesContainer>
              </div>
            </WireframeAnnotationsWrapper>
          </section>
        </WireframeAnnotationsContainer>
      </div>
    </WireframeMainContainer>
  </WireframeContainer>
</WireframeProvider>
`;

exports[`Wireframe: WireframeContainer should render children with annotation options and wireframe components when open 1`] = `
.emotion-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-32 [data-annotations-container] {
  width: 0;
  min-width: 0;
}

.emotion-32 [data-annotations-container] [data-annotations] {
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.emotion-32.open [data-annotations-container] {
  width: 25%;
  min-width: 250px;
}

.emotion-32.open [data-annotations-container] [data-annotations] {
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

.emotion-0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-30 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 400px;
  padding: 0;
  -webkit-transition: width 250ms ease-in-out,min-width 250ms ease-in-out;
  transition: width 250ms ease-in-out,min-width 250ms ease-in-out;
}

.emotion-28 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-left: 2px solid #555;
  padding: 0;
  width: 25%;
  max-width: 400px;
  min-width: 250px;
  position: fixed;
  right: 0;
  top: 0;
  bottom: 0;
  background-color: #fafafa;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: -webkit-transform 250ms ease-in-out;
  -webkit-transition: transform 250ms ease-in-out;
  transition: transform 250ms ease-in-out;
  z-index: 6000;
}

.emotion-28 header.annotations {
  padding: 0.1em 0.75em;
  background-color: #555;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-28 header.annotations h1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-size: 1.5em;
  margin: 0;
  line-height: 1.5;
  font-weight: lighter;
}

.emotion-2 {
  font-size: 1.25em;
  position: absolute;
  left: 0;
  top: 50%;
  background-color: #555;
  color: #fff;
  padding: 0.25em;
  border: none;
  border-radius: 0.25em 0 0 0.25em;
  -webkit-transform: translate(-100%,-50%);
  -ms-transform: translate(-100%,-50%);
  transform: translate(-100%,-50%);
  -webkit-transition: opacity 100ms;
  transition: opacity 100ms;
  min-height: 3em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  opacity: 1;
}

.emotion-2:active,
.emotion-2:focus,
.emotion-2:hover {
  outline: none;
  opacity: 1;
}

.emotion-2 span {
  font-weight: bold;
  -webkit-transition: -webkit-transform 250ms;
  -webkit-transition: transform 250ms;
  transition: transform 250ms;
  display: block;
}

.emotion-4 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  cursor: pointer;
  line-height: 1;
  font-size: 1.5em;
  background-color: transparent;
  border: none;
  padding: 0 0 0 0.25em;
  color: inherit;
}

.emotion-26 {
  overflow: auto;
  z-index: 1;
  position: relative;
  background-color: inherit;
}

.emotion-24 {
  list-style: none;
  margin: 0;
  padding: 0;
  outline: none;
}

.emotion-24 li {
  padding: 6px 0;
  border-bottom: 1px solid #ccc;
}

.emotion-24 li:last-child {
  border-bottom: none;
}

.emotion-24 li.highlight {
  background-color: rgba(64,134,247,0.25);
}

.emotion-13 {
  font-size: 0.85rem;
}

.emotion-13 > header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 10px;
  margin-bottom: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-13 > header h2 {
  font-size: 1.2rem;
  margin: 0;
  font-weight: normal;
}

.emotion-13 > article {
  padding: 0 10px;
}

.emotion-9 {
  margin-right: 0.5em;
  border-width: 1px;
  border-style: solid;
  font-size: 0.8em;
}

.emotion-7 {
  border-radius: 2em;
  background-color: yellow;
  border-color: #caca00;
  white-space: nowrap;
  min-width: 2em;
  height: 2em;
  padding: 0.25em 0.5em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-style: normal;
  font-weight: normal;
  margin-right: 0.5em;
  border-width: 1px;
  border-style: solid;
  font-size: 0.8em;
}

<WireframeProvider
  api={
    Object {
      "getAnnotations": [Function],
      "highlightNote": [Function],
      "isOpen": [Function],
      "onOpen": [Function],
      "register": [Function],
      "setOpen": [Function],
      "setOptions": [Function],
      "unregister": [Function],
    }
  }
>
  <WireframeContainer
    defaultOpen={false}
    onScrollIntoView={[MockFunction]}
  >
    <WireframeMainContainer
      className="open"
      data-test="container"
    >
      <div
        className="open emotion-32 emotion-33"
        data-test="container"
      >
        <WireframeBody>
          <main
            className="emotion-0 emotion-1"
          >
            <div>
              Child component 1
            </div>
            <div>
              Child component 2
            </div>
          </main>
        </WireframeBody>
        <WireframeAnnotationsContainer
          data-annotations-container={true}
        >
          <section
            className="emotion-30 emotion-31"
            data-annotations-container={true}
          >
            <WireframeAnnotationsWrapper
              data-annotations={true}
            >
              <div
                className="emotion-28 emotion-29"
                data-annotations={true}
              >
                <WireframeAnnotationsToggle
                  data-test="toggle"
                  onClick={[Function]}
                  open={true}
                  title="Toggle annotations"
                >
                  <button
                    className="emotion-2 emotion-3"
                    data-test="toggle"
                    onClick={[Function]}
                    open={true}
                    title="Toggle annotations"
                  >
                    <span>
                      →
                    </span>
                  </button>
                </WireframeAnnotationsToggle>
                <header
                  className="annotations"
                >
                  <h1>
                    Annotations
                  </h1>
                  <WireframeAnnotationsClose
                    aria-label="Close annotations"
                    onClick={[Function]}
                  >
                    <button
                      aria-label="Close annotations"
                      className="emotion-4 emotion-5"
                      onClick={[Function]}
                    >
                      ×
                    </button>
                  </WireframeAnnotationsClose>
                </header>
                <WireframeAnnotationNotesContainer>
                  <div
                    className="emotion-26 emotion-27"
                  >
                    <WireframeAnnotationNotes
                      annotations={
                        Array [
                          Object {
                            "Component": [MockFunction],
                            "count": 1,
                            "id": 1,
                            "options": Object {
                              "description": "Test description 1",
                              "title": "Test component 1",
                            },
                          },
                          Object {
                            "Component": [MockFunction],
                            "count": 1,
                            "id": 2,
                            "options": Object {
                              "description": "Test description 2",
                              "title": "Test component 2",
                            },
                          },
                        ]
                      }
                    >
                      <WireframeAnnotationNotesContainer
                        tabIndex={0}
                      >
                        <ul
                          className="emotion-24 emotion-25"
                          tabIndex={0}
                        >
                          <li
                            className=""
                            data-annotation-id={1}
                            key="1"
                          >
                            <WireframeAnnotationNote
                              annotation={
                                Object {
                                  "Component": [MockFunction],
                                  "count": 1,
                                  "id": 1,
                                  "options": Object {
                                    "description": "Test description 1",
                                    "title": "Test component 1",
                                  },
                                }
                              }
                            >
                              <WireframeAnnotationsNoteContainer>
                                <article
                                  className="emotion-13 emotion-14"
                                >
                                  <header>
                                    <IdentifierNote
                                      annotation={
                                        Object {
                                          "Component": [MockFunction],
                                          "count": 1,
                                          "id": 1,
                                          "options": Object {
                                            "description": "Test description 1",
                                            "title": "Test component 1",
                                          },
                                        }
                                      }
                                    >
                                      <Identifier
                                        annotation={
                                          Object {
                                            "Component": [MockFunction],
                                            "count": 1,
                                            "id": 1,
                                            "options": Object {
                                              "description": "Test description 1",
                                              "title": "Test component 1",
                                            },
                                          }
                                        }
                                        className="emotion-9 emotion-6"
                                      >
                                        <IdentifierContainer
                                          className="emotion-9 emotion-6"
                                          data-annotation-identifier={true}
                                        >
                                          <cite
                                            className="emotion-6 emotion-7 emotion-8"
                                            data-annotation-identifier={true}
                                          >
                                            1
                                          </cite>
                                        </IdentifierContainer>
                                      </Identifier>
                                    </IdentifierNote>
                                    <h2>
                                      Test component 1
                                    </h2>
                                  </header>
                                  <article>
                                    Test description 1
                                  </article>
                                </article>
                              </WireframeAnnotationsNoteContainer>
                            </WireframeAnnotationNote>
                          </li>
                          <li
                            className=""
                            data-annotation-id={2}
                            key="2"
                          >
                            <WireframeAnnotationNote
                              annotation={
                                Object {
                                  "Component": [MockFunction],
                                  "count": 1,
                                  "id": 2,
                                  "options": Object {
                                    "description": "Test description 2",
                                    "title": "Test component 2",
                                  },
                                }
                              }
                            >
                              <WireframeAnnotationsNoteContainer>
                                <article
                                  className="emotion-13 emotion-14"
                                >
                                  <header>
                                    <IdentifierNote
                                      annotation={
                                        Object {
                                          "Component": [MockFunction],
                                          "count": 1,
                                          "id": 2,
                                          "options": Object {
                                            "description": "Test description 2",
                                            "title": "Test component 2",
                                          },
                                        }
                                      }
                                    >
                                      <Identifier
                                        annotation={
                                          Object {
                                            "Component": [MockFunction],
                                            "count": 1,
                                            "id": 2,
                                            "options": Object {
                                              "description": "Test description 2",
                                              "title": "Test component 2",
                                            },
                                          }
                                        }
                                        className="emotion-9 emotion-6"
                                      >
                                        <IdentifierContainer
                                          className="emotion-9 emotion-6"
                                          data-annotation-identifier={true}
                                        >
                                          <cite
                                            className="emotion-6 emotion-7 emotion-8"
                                            data-annotation-identifier={true}
                                          >
                                            2
                                          </cite>
                                        </IdentifierContainer>
                                      </Identifier>
                                    </IdentifierNote>
                                    <h2>
                                      Test component 2
                                    </h2>
                                  </header>
                                  <article>
                                    Test description 2
                                  </article>
                                </article>
                              </WireframeAnnotationsNoteContainer>
                            </WireframeAnnotationNote>
                          </li>
                        </ul>
                      </WireframeAnnotationNotesContainer>
                    </WireframeAnnotationNotes>
                  </div>
                </WireframeAnnotationNotesContainer>
              </div>
            </WireframeAnnotationsWrapper>
          </section>
        </WireframeAnnotationsContainer>
      </div>
    </WireframeMainContainer>
  </WireframeContainer>
</WireframeProvider>
`;

exports[`Wireframe: WireframeContainer should render children with annotation options but no wireframe components when close option is used 1`] = `
.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 [data-annotations-container] {
  width: 0;
  min-width: 0;
}

.emotion-8 [data-annotations-container] [data-annotations] {
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.emotion-8.open [data-annotations-container] {
  width: 25%;
  min-width: 250px;
}

.emotion-8.open [data-annotations-container] [data-annotations] {
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

.emotion-0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-6 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 400px;
  padding: 0;
  -webkit-transition: width 250ms ease-in-out,min-width 250ms ease-in-out;
  transition: width 250ms ease-in-out,min-width 250ms ease-in-out;
}

.emotion-4 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-left: 2px solid #555;
  padding: 0;
  width: 25%;
  max-width: 400px;
  min-width: 250px;
  position: fixed;
  right: 0;
  top: 0;
  bottom: 0;
  background-color: #fafafa;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: -webkit-transform 250ms ease-in-out;
  -webkit-transition: transform 250ms ease-in-out;
  transition: transform 250ms ease-in-out;
  z-index: 6000;
}

.emotion-4 header.annotations {
  padding: 0.1em 0.75em;
  background-color: #555;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-4 header.annotations h1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-size: 1.5em;
  margin: 0;
  line-height: 1.5;
  font-weight: lighter;
}

.emotion-2 {
  font-size: 1.25em;
  position: absolute;
  left: 0;
  top: 50%;
  background-color: #555;
  color: #fff;
  padding: 0.25em;
  border: none;
  border-radius: 0.25em 0 0 0.25em;
  -webkit-transform: translate(-100%,-50%);
  -ms-transform: translate(-100%,-50%);
  transform: translate(-100%,-50%);
  -webkit-transition: opacity 100ms;
  transition: opacity 100ms;
  min-height: 3em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  opacity: 0.25;
}

.emotion-2:active,
.emotion-2:focus,
.emotion-2:hover {
  outline: none;
  opacity: 1;
}

.emotion-2 span {
  font-weight: bold;
  -webkit-transition: -webkit-transform 250ms;
  -webkit-transition: transform 250ms;
  transition: transform 250ms;
  display: block;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

<WireframeProvider
  api={
    Object {
      "getAnnotations": [Function],
      "highlightNote": [Function],
      "isOpen": [Function],
      "onOpen": [Function],
      "register": [Function],
      "setOpen": [Function],
      "setOptions": [Function],
      "unregister": [Function],
    }
  }
>
  <WireframeContainer
    defaultOpen={false}
    onScrollIntoView={[MockFunction]}
  >
    <WireframeMainContainer
      className=""
      data-test="container"
    >
      <div
        className=" emotion-8 emotion-9"
        data-test="container"
      >
        <WireframeBody>
          <main
            className="emotion-0 emotion-1"
          >
            <div>
              Child component 1
            </div>
            <div>
              Child component 2
            </div>
          </main>
        </WireframeBody>
        <WireframeAnnotationsContainer
          data-annotations-container={true}
        >
          <section
            className="emotion-6 emotion-7"
            data-annotations-container={true}
          >
            <WireframeAnnotationsWrapper
              data-annotations={true}
            >
              <div
                className="emotion-4 emotion-5"
                data-annotations={true}
              >
                <WireframeAnnotationsToggle
                  data-test="toggle"
                  onClick={[Function]}
                  open={false}
                  title="Toggle annotations"
                >
                  <button
                    className="emotion-2 emotion-3"
                    data-test="toggle"
                    onClick={[Function]}
                    open={false}
                    title="Toggle annotations"
                  >
                    <span>
                      →
                    </span>
                  </button>
                </WireframeAnnotationsToggle>
              </div>
            </WireframeAnnotationsWrapper>
          </section>
        </WireframeAnnotationsContainer>
      </div>
    </WireframeMainContainer>
  </WireframeContainer>
</WireframeProvider>
`;

exports[`Wireframe: WireframeContainer should render children with annotation options but no wireframe components when closed 1`] = `
.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 [data-annotations-container] {
  width: 0;
  min-width: 0;
}

.emotion-8 [data-annotations-container] [data-annotations] {
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.emotion-8.open [data-annotations-container] {
  width: 25%;
  min-width: 250px;
}

.emotion-8.open [data-annotations-container] [data-annotations] {
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

.emotion-0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-6 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 400px;
  padding: 0;
  -webkit-transition: width 250ms ease-in-out,min-width 250ms ease-in-out;
  transition: width 250ms ease-in-out,min-width 250ms ease-in-out;
}

.emotion-4 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-left: 2px solid #555;
  padding: 0;
  width: 25%;
  max-width: 400px;
  min-width: 250px;
  position: fixed;
  right: 0;
  top: 0;
  bottom: 0;
  background-color: #fafafa;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: -webkit-transform 250ms ease-in-out;
  -webkit-transition: transform 250ms ease-in-out;
  transition: transform 250ms ease-in-out;
  z-index: 6000;
}

.emotion-4 header.annotations {
  padding: 0.1em 0.75em;
  background-color: #555;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-4 header.annotations h1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-size: 1.5em;
  margin: 0;
  line-height: 1.5;
  font-weight: lighter;
}

.emotion-2 {
  font-size: 1.25em;
  position: absolute;
  left: 0;
  top: 50%;
  background-color: #555;
  color: #fff;
  padding: 0.25em;
  border: none;
  border-radius: 0.25em 0 0 0.25em;
  -webkit-transform: translate(-100%,-50%);
  -ms-transform: translate(-100%,-50%);
  transform: translate(-100%,-50%);
  -webkit-transition: opacity 100ms;
  transition: opacity 100ms;
  min-height: 3em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  opacity: 0.25;
}

.emotion-2:active,
.emotion-2:focus,
.emotion-2:hover {
  outline: none;
  opacity: 1;
}

.emotion-2 span {
  font-weight: bold;
  -webkit-transition: -webkit-transform 250ms;
  -webkit-transition: transform 250ms;
  transition: transform 250ms;
  display: block;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

<WireframeProvider
  api={
    Object {
      "getAnnotations": [Function],
      "highlightNote": [Function],
      "isOpen": [Function],
      "onOpen": [Function],
      "register": [Function],
      "setOpen": [Function],
      "setOptions": [Function],
      "unregister": [Function],
    }
  }
>
  <WireframeContainer
    defaultOpen={false}
    onScrollIntoView={[MockFunction]}
  >
    <WireframeMainContainer
      className=""
      data-test="container"
    >
      <div
        className=" emotion-8 emotion-9"
        data-test="container"
      >
        <WireframeBody>
          <main
            className="emotion-0 emotion-1"
          >
            <div>
              Child component 1
            </div>
            <div>
              Child component 2
            </div>
          </main>
        </WireframeBody>
        <WireframeAnnotationsContainer
          data-annotations-container={true}
        >
          <section
            className="emotion-6 emotion-7"
            data-annotations-container={true}
          >
            <WireframeAnnotationsWrapper
              data-annotations={true}
            >
              <div
                className="emotion-4 emotion-5"
                data-annotations={true}
              >
                <WireframeAnnotationsToggle
                  data-test="toggle"
                  onClick={[Function]}
                  open={false}
                  title="Toggle annotations"
                >
                  <button
                    className="emotion-2 emotion-3"
                    data-test="toggle"
                    onClick={[Function]}
                    open={false}
                    title="Toggle annotations"
                  >
                    <span>
                      →
                    </span>
                  </button>
                </WireframeAnnotationsToggle>
              </div>
            </WireframeAnnotationsWrapper>
          </section>
        </WireframeAnnotationsContainer>
      </div>
    </WireframeMainContainer>
  </WireframeContainer>
</WireframeProvider>
`;

exports[`Wireframe: WireframeContainer should render children with annotation options but no wireframe components when toggle closed 1`] = `
.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 [data-annotations-container] {
  width: 0;
  min-width: 0;
}

.emotion-8 [data-annotations-container] [data-annotations] {
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.emotion-8.open [data-annotations-container] {
  width: 25%;
  min-width: 250px;
}

.emotion-8.open [data-annotations-container] [data-annotations] {
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

.emotion-0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-6 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 400px;
  padding: 0;
  -webkit-transition: width 250ms ease-in-out,min-width 250ms ease-in-out;
  transition: width 250ms ease-in-out,min-width 250ms ease-in-out;
}

.emotion-4 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-left: 2px solid #555;
  padding: 0;
  width: 25%;
  max-width: 400px;
  min-width: 250px;
  position: fixed;
  right: 0;
  top: 0;
  bottom: 0;
  background-color: #fafafa;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: -webkit-transform 250ms ease-in-out;
  -webkit-transition: transform 250ms ease-in-out;
  transition: transform 250ms ease-in-out;
  z-index: 6000;
}

.emotion-4 header.annotations {
  padding: 0.1em 0.75em;
  background-color: #555;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-4 header.annotations h1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-size: 1.5em;
  margin: 0;
  line-height: 1.5;
  font-weight: lighter;
}

.emotion-2 {
  font-size: 1.25em;
  position: absolute;
  left: 0;
  top: 50%;
  background-color: #555;
  color: #fff;
  padding: 0.25em;
  border: none;
  border-radius: 0.25em 0 0 0.25em;
  -webkit-transform: translate(-100%,-50%);
  -ms-transform: translate(-100%,-50%);
  transform: translate(-100%,-50%);
  -webkit-transition: opacity 100ms;
  transition: opacity 100ms;
  min-height: 3em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  opacity: 0.25;
}

.emotion-2:active,
.emotion-2:focus,
.emotion-2:hover {
  outline: none;
  opacity: 1;
}

.emotion-2 span {
  font-weight: bold;
  -webkit-transition: -webkit-transform 250ms;
  -webkit-transition: transform 250ms;
  transition: transform 250ms;
  display: block;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

<WireframeProvider
  api={
    Object {
      "getAnnotations": [Function],
      "highlightNote": [Function],
      "isOpen": [Function],
      "onOpen": [Function],
      "register": [Function],
      "setOpen": [Function],
      "setOptions": [Function],
      "unregister": [Function],
    }
  }
>
  <WireframeContainer
    defaultOpen={false}
    onScrollIntoView={[MockFunction]}
  >
    <WireframeMainContainer
      className=""
      data-test="container"
    >
      <div
        className=" emotion-8 emotion-9"
        data-test="container"
      >
        <WireframeBody>
          <main
            className="emotion-0 emotion-1"
          >
            <div>
              Child component 1
            </div>
            <div>
              Child component 2
            </div>
          </main>
        </WireframeBody>
        <WireframeAnnotationsContainer
          data-annotations-container={true}
        >
          <section
            className="emotion-6 emotion-7"
            data-annotations-container={true}
          >
            <WireframeAnnotationsWrapper
              data-annotations={true}
            >
              <div
                className="emotion-4 emotion-5"
                data-annotations={true}
              >
                <WireframeAnnotationsToggle
                  data-test="toggle"
                  onClick={[Function]}
                  open={false}
                  title="Toggle annotations"
                >
                  <button
                    className="emotion-2 emotion-3"
                    data-test="toggle"
                    onClick={[Function]}
                    open={false}
                    title="Toggle annotations"
                  >
                    <span>
                      →
                    </span>
                  </button>
                </WireframeAnnotationsToggle>
              </div>
            </WireframeAnnotationsWrapper>
          </section>
        </WireframeAnnotationsContainer>
      </div>
    </WireframeMainContainer>
  </WireframeContainer>
</WireframeProvider>
`;

exports[`Wireframe: WireframeContainer should render children with no wireframe components 1`] = `
.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 [data-annotations-container] {
  width: 0;
  min-width: 0;
}

.emotion-8 [data-annotations-container] [data-annotations] {
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.emotion-8.open [data-annotations-container] {
  width: 25%;
  min-width: 250px;
}

.emotion-8.open [data-annotations-container] [data-annotations] {
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

.emotion-0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-6 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 400px;
  padding: 0;
  -webkit-transition: width 250ms ease-in-out,min-width 250ms ease-in-out;
  transition: width 250ms ease-in-out,min-width 250ms ease-in-out;
}

.emotion-4 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-left: 2px solid #555;
  padding: 0;
  width: 25%;
  max-width: 400px;
  min-width: 250px;
  position: fixed;
  right: 0;
  top: 0;
  bottom: 0;
  background-color: #fafafa;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: -webkit-transform 250ms ease-in-out;
  -webkit-transition: transform 250ms ease-in-out;
  transition: transform 250ms ease-in-out;
  z-index: 6000;
}

.emotion-4 header.annotations {
  padding: 0.1em 0.75em;
  background-color: #555;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-4 header.annotations h1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-size: 1.5em;
  margin: 0;
  line-height: 1.5;
  font-weight: lighter;
}

.emotion-2 {
  font-size: 1.25em;
  position: absolute;
  left: 0;
  top: 50%;
  background-color: #555;
  color: #fff;
  padding: 0.25em;
  border: none;
  border-radius: 0.25em 0 0 0.25em;
  -webkit-transform: translate(-100%,-50%);
  -ms-transform: translate(-100%,-50%);
  transform: translate(-100%,-50%);
  -webkit-transition: opacity 100ms;
  transition: opacity 100ms;
  min-height: 3em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  opacity: 0.25;
}

.emotion-2:active,
.emotion-2:focus,
.emotion-2:hover {
  outline: none;
  opacity: 1;
}

.emotion-2 span {
  font-weight: bold;
  -webkit-transition: -webkit-transform 250ms;
  -webkit-transition: transform 250ms;
  transition: transform 250ms;
  display: block;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

<WireframeProvider
  api={
    Object {
      "getAnnotations": [Function],
      "highlightNote": [Function],
      "isOpen": [Function],
      "onOpen": [Function],
      "register": [Function],
      "setOpen": [Function],
      "setOptions": [Function],
      "unregister": [Function],
    }
  }
>
  <WireframeContainer
    defaultOpen={false}
    onScrollIntoView={[MockFunction]}
  >
    <WireframeMainContainer
      className=""
      data-test="container"
    >
      <div
        className=" emotion-8 emotion-9"
        data-test="container"
      >
        <WireframeBody>
          <main
            className="emotion-0 emotion-1"
          >
            <div>
              Child component 1
            </div>
            <div>
              Child component 2
            </div>
          </main>
        </WireframeBody>
        <WireframeAnnotationsContainer
          data-annotations-container={true}
        >
          <section
            className="emotion-6 emotion-7"
            data-annotations-container={true}
          >
            <WireframeAnnotationsWrapper
              data-annotations={true}
            >
              <div
                className="emotion-4 emotion-5"
                data-annotations={true}
              >
                <WireframeAnnotationsToggle
                  data-test="toggle"
                  onClick={[Function]}
                  open={false}
                  title="Toggle annotations"
                >
                  <button
                    className="emotion-2 emotion-3"
                    data-test="toggle"
                    onClick={[Function]}
                    open={false}
                    title="Toggle annotations"
                  >
                    <span>
                      →
                    </span>
                  </button>
                </WireframeAnnotationsToggle>
              </div>
            </WireframeAnnotationsWrapper>
          </section>
        </WireframeAnnotationsContainer>
      </div>
    </WireframeMainContainer>
  </WireframeContainer>
</WireframeProvider>
`;
